fullSandbox11072023/force-app/main/default/objects/ProductImageUrls__c/ProductImageUrls__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Custom setting to hold Product Image Urls</description>
    <label>ProductImageUrls</label>
</CustomObject>