fullSandbox11072023/force-app/main/default/objects/ProductImageUrls__c/fields/BrandName__c.field-meta.xml
<CustomField>
    <fullName>BrandName__c</fullName>
    <description>BrandName</description>
    <inlineHelpText>BrandName</inlineHelpText>
    <label>BrandName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>