fullSandbox11072023/force-app/main/default/objects/ProductImageUrls__c/fields/EndpointSuffix__c.field-meta.xml
<CustomField>
    <fullName>EndpointSuffix__c</fullName>
    <description>EndpointSuffix</description>
    <inlineHelpText>EndpointSuffix</inlineHelpText>
    <label>EndpointSuffix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>