fullSandbox11072023/force-app/main/default/objects/ProductImageUrls__c/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <description>Group</description>
    <inlineHelpText>Group</inlineHelpText>
    <label>Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>