fullSandbox11072023/force-app/main/default/objects/ProductImageUrls__c/fields/SBU__c.field-meta.xml
<CustomField>
    <fullName>SBU__c</fullName>
    <description>SBU</description>
    <inlineHelpText>SBU</inlineHelpText>
    <label>SBU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>