fullSandbox11072023/force-app/main/default/objects/ProductImageUrls__c/listViews/Detailed_View.listView-meta.xml
<ListView>
    <fullName>Detailed_View</fullName>
    <columns>NAME</columns>
    <columns>SBU__c</columns>
    <columns>Group__c</columns>
    <columns>BrandName__c</columns>
    <columns>EndpointSuffix__c</columns>
    <filterScope>Everything</filterScope>
    <label>Detailed View</label>
    <language>en_US</language>
</ListView>